feat: setup jwt authentication
