# openapi.yml
@@ -6,7 +6,7 @@ info:
   version: 0.0.1
 
 paths:
-  /songs/list:
+  /songs:
     get:
       summary: Find a song by album/artist/name.
       requestBody:
@@ -205,16 +205,11 @@ paths:
           description: The user already exists.
         "500":
           description: Internal server error.
-  /users/signin:
+  /login:
     post:
       summary: Login a user.
-      security: []
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/SignOptions"
+      security:
+        - basicAuth: []
       responses:
         "200":
           description: A token for the logged-in user.
@@ -224,18 +219,8 @@ paths:
                 $ref: "#/components/schemas/SignResult"
         "400":
           description: Invalid request body.
-        "404":
-          description: Requested user doesn't exist or incorrect password.
-        "500":
-          description: Internal server error.
-  /users/signout:
-    post:
-      summary: Logout a user.
-      responses:
-        "200":
-          description: User logged out.
         "401":
-          description: Unauthenticated or invalid token.
+          description: Requested user doesn't exist or incorrect password.
         "500":
           description: Internal server error.
   /users/delete:
@@ -302,6 +287,9 @@ components:
         token:
           type: string
   securitySchemes:
+    basicAuth:
+      type: http
+      scheme: basic
     bearerAuth:
       type: http
       scheme: bearer
